# sydbox

./: .gitignore  .gitreview  .mailmap  AUTHORS.mkd  Makefile.am  NEWS.mkd  README.mkd  TODO.mkd  configure.ac
data/: Makefile.am  paludis-ipv6.conf  paludis-noipv6.conf  paludis.conf  sydbox.1.txt  sydbox.conf
src/: Makefile.am  children.c  context.c  dispatch-table.h  dispatch.c  dispatch32.c  dispatch64.c  flags.h  loop.c  main.c  net.c  net.h  path.c  path.h  proc.c  proc.h  syd-children.c  syd-children.h  syd-config.c  syd-config.h  syd-context.c  syd-context.h  syd-dispatch-table.h  syd-dispatch.c  syd-dispatch.h  syd-dispatch32.c  syd-dispatch64.c  syd-flags.h  syd-log.c  syd-loop.c  syd-loop.h  syd-main.c  syd-net.c  syd-net.h  syd-path.c  syd-path.h  syd-pink.c  syd-pink.h  syd-proc.c  syd-proc.h  (+27 more)
tests/: Makefile.am  check_trace.c
tests/progtests/: Makefile.am  t01-chmod.bash  t01_chmod.c  t01_chmod_toolong.c  t02-chown.bash  t02_chown.c  t02_chown_toolong.c  t03-open.bash  t03_open.c  t03_open_toolong.c  t04-creat.bash  t04_creat.c  t04_creat_toolong.c  t05-lchown.bash  t05_lchown.c  t06-link.bash  t06_link.c  t07-mkdir.bash  t07_mkdir.c  t07_mkdir_toolong.c  t08-mknod.bash  t08_mknod.c  t08_mknod_toolong.c  t09-access.bash  t09_access.c  t10-rename-first.bash  t10_rename_first.c  t11-rename-second.bash  t11_rename_second.c  t12-rmdir.bash  t12_rmdir.c  t12_rmdir_toolong.c  t13-symlink.bash  t13_symlink.c  t13_symlink_toolong.c  t14-truncate.bash  t14_truncate.c  t14_truncate_toolong.c  t15-mount.bash  t15_mount.c  (+89 more)
tests/unit/: Makefile.am  test-children.c  test-helpers.h  test-net.c  test-path.c  test-sydbox-utils.c  test-trace.c
tests/valgrind/: default.supp
