CLEANFILES= gmon.out *.gcda *.gcno *.gcov
EXTRA_DIST=

DEFS+= -DDATADIR=\"$(datadir)\" -DSYSCONFDIR=\"$(sysconfdir)\" \
       -DGIT_HEAD=\"$(GIT_HEAD)\"
AM_CFLAGS= $(glib_CFLAGS) @SYDBOX_CFLAGS@
bin_PROGRAMS = sydbox
noinst_HEADERS= syd-children.h syd-config.h syd-context.h syd-flags.h \
		syd-log.h syd-log.h syd-loop.h syd-net.h syd-path.h \
		syd-proc.h syd-syscall.h syd-trace.h syd-trace-util.h \
		syd-wrappers.h syd-utils.h
sydbox_SOURCES = syd-children.c syd-config.c syd-context.c syd-log.c \
		 syd-loop.c syd-net.c syd-path.c syd-proc.c \
		 syd-syscall.c syd-trace.c syd-trace-util.c \
		 syd-utils.c syd-wrappers.c syd-main.c
sydbox_LDADD= $(glib_LIBS)

SPARSE=sparse
SPARSE_CPPFLAGS= $(DEFAULT_INCLUDES) \
		 -Wbitwise -Wcast-to-as -Wdefault-bitfield-sign \
		 -Wparen-string -Wptr-subtraction-blows \
		 -Wreturn-void -Wshadow -Wtypesign -Wundef \
		 -I$(shell $(CC) -print-file-name=include) \
		 -I$(shell $(CC) -print-file-name=include-fixed)

noinst_HEADERS+= syd-dispatch.h syd-dispatch-table.h
if I386
sydbox_SOURCES+= syd-dispatch.c syd-trace-x86.c
SPARSE_CPPFLAGS+= -D__i386__=1
endif
if X86_64
sydbox_SOURCES+= syd-dispatch32.c syd-dispatch64.c syd-trace-x86_64.c
SPARSE_CPPFLAGS+= -D__x86_64__=1
endif
if IA64
sydbox_SOURCES+= syd-dispatch.c syd-trace-ia64.c
SPARSE_CPPFLAGS+= -D__ia64__=1
endif
if POWERPC
sydbox_SOURCES+= syd-dispatch.c syd-trace-powerpc.c
SPARSE_CPPFLAGS+= -D__powerpc__=1
endif
if POWERPC64
sydbox_SOURCES+= syd-dispatch.c syd-trace-powerpc.c
SPARSE_CPPFLAGS+= -D__powerpc64__=1
endif

sparse-check:
	for src in $(sydbox_SOURCES); \
	do \
		$(SPARSE) $(DEFS) $(SPARSE_CPPFLAGS) $(glib_CFLAGS) $$src || exit 1; \
	done

nodist_sydbox_SOURCES=
BUILT_SOURCES=
if P1
nodist_sydbox_SOURCES+= syd-syscallent.h
BUILT_SOURCES+= syd-syscallent.h
CLEANFILES+= syd-syscallent.h
if GCC
syd-syscallent.h:
	$(AM_V_GEN)
	$(AM_V_at)echo "/* vim: set ro : */" > $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo "/* THIS IS A GENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY */" >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo '' | $(CC) $(CFLAGS) -E --include asm/unistd.h -dM - |\
		sort -n -k 3 |\
		while read line; do \
			if [ "$${line#\#define __NR_}" != "$$line" ]; then \
				no="$$(echo \"$$line\" | cut -d' ' -f2)"; \
				name="$$(echo \"$$no\" | $(SED) -e 's:__NR_::')"; \
				echo "{$$no, $$name}," >> $@ ;\
			fi \
		done
else
syd-syscallent.h:
	$(AM_V_GEN)
	$(AM_V_at)echo "/* vim: set ro : */" > $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo "/* THIS IS A GENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY */" >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo >> $@
endif
endif
if P2
nodist_sydbox_SOURCES+= syd-syscallent32.h syd-syscallent64.h
BUILT_SOURCES+= syd-syscallent32.h syd-syscallent64.h
CLEANFILES+= syd-syscallent32.h syd-syscallent64.h
if GCC
syd-syscallent32.h:
	$(AM_V_GEN)
	$(AM_V_at)echo "/* vim: set ro : */" > $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo "/* THIS IS A GENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY */" >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo '' | $(CC) $(CFLAGS) -E --include asm/unistd_32.h -dM - |\
		sort -n -k 3 |\
		while read line; do \
			if [ "$${line#\#define __NR_}" != "$$line" ]; then \
				no="$$(echo \"$$line\" | cut -d' ' -f2)"; \
				name="$$(echo \"$$no\" | $(SED) -e 's:__NR_::')"; \
				echo "{$$no, $$name}," >> $@ ;\
			fi \
		done
syd-syscallent64.h:
	$(AM_V_GEN)
	$(AM_V_at)echo "/* vim: set ro : */" > $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo "/* THIS IS A GENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY */" >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo '' | $(CC) $(CFLAGS) -E --include asm/unistd_64.h -dM - |\
		sort -n -k 3 |\
		while read line; do \
			if [ "$${line#\#define __NR_}" != "$$line" ]; then \
				no="$$(echo \"$$line\" | cut -d' ' -f2)"; \
				name="$$(echo \"$$no\" | $(SED) -e 's:__NR_::')"; \
				echo "{$$no, $$name}," >> $@ ;\
			fi \
		done
else
syd-syscallent32.h:
	$(AM_V_GEN)
	$(AM_V_at)echo "/* vim: set ro : */" > $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo "/* THIS IS A GENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY */" >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo >> $@
syd-syscallent64.h:
	$(AM_V_GEN)
	$(AM_V_at)echo "/* vim: set ro : */" > $@
	$(AM_V_at)echo >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo "/* THIS IS A GENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY */" >> $@
	$(AM_V_at)echo "/* ******************************************************** */" >> $@
	$(AM_V_at)echo >> $@
endif
endif

.PHONY: sparse-check
